<resources>
    <string name="app_name">Hillfort Assignment</string>

    <string name="hint_hillfortTitle">Enter Hillfort Title</string>
    <string name="hint_hillfortDescription">Enter a Description </string>
    <string name="hint_settingsEmail">Enter your Email </string>
    <string name="hint_settingsPassword">Enter your password </string>
    <string name="hint_settingsAll">Please check your details </string>
    <string name="hint_hillfortImage">Please add an image </string>
    <string name="hint_login_f1">please enter email</string>
    <string name="hint_login_f2">please enter password </string>

    <string name="activity_title_ReptImage">Selected User Primary Images</string>
    <string name="activity_title_imagesselectedhilforts">Select a hillfort to view Images</string>

    Select a hillfort to view Images

    <string name="menu_addHillfort">Add</string>
    <string name="menutt_addHillfort">to add new hillfort</string>
    <string name="menu_updateHillfort">Update</string>
    <string name="menutt_updateHillfort">Click on hillfort to edit</string>
    <string name="menu_up">Back</string>
    <string name="menutt_up">brings to back to main screen</string>
    <string name="menu_logout">LogOut</string>
    <string name="menutt_logout">Logs you Out</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menutt_cancel">to cancel action</string>
    <string name="menu_delete">Delete</string>
    <string name="menutt_delete">to delete object</string>
    <string name="menu_settings">Settings</string>
    <string name="menutt_settings">to view and update user Info</string>
    <string name="menu_stats">Stats</string>
    <string name="menutt_stats">to view stats</string>
    <string name="menu_stats_other">Other User Stats</string>

    <string name="menu_saveHillfort">Save</string>
    <string name="menutt_saveHillfort">to view save</string>
    <string name="menu_location">Location</string>
    <string name="menutt_locationt">to view Location</string>
    <string name="menu_login">Login</string>
    <string name="menu_about">About</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_report">Hillfort Functions</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="button_addImage"> Add Image </string>
    <string name="button_selectImage">Select Image</string>
    <string name="button_saveImage">Save Image</string>
    <string name="togglebutton">Site Visted</string>

    <string name="button_addHillfort"> Add Hillfort </string>
    <string name="button_saveHillfort"> Save Hillfort </string>
    <string name="button_updateHillfort"> Update Hillfort </string>
    <string name="button_deleteHillfort"> Delete Hillfort </string>
    <string name="button_cancelHillfort"> Cancel Activity </string>
    <string name="button_favourite"> Fav </string>

    <string name="button_addSetting"> Add Student </string>
    <string name="button_updateSetting"> Update Student Settings </string>
    <string name="button_saveSetting">Save Student Setting</string>
    <string name="button_deleteSetting">Delete Student Setting</string>

    <string name="button_setLocation">Set Location</string>
    <string name="button_saveLocation">Save Location</string>
    <string name="button_updateLocation">Update Location</string>
    <string name="button_deleteLocation">Delete Location</string>

    <string name="toast_locationDeleted">Location Deleted</string>
    <string name="toast_hillfortDeleted">Hillfort Deleted</string>
    <string name="toast_settingDeleted">Setting Deleted</string>
    <string name="toast_imageDeleted">Image Deleted</string>

    <string name="button_date_Visited">Press to select Date </string>
    <string name="title_activity_maps">Map</string>

    <string name="placemark_image_placeholder">Placemark Imagee</string>
    <string name="placemark_title_placeholder">Placemark Title</string>
    <string name="placemark_description_placeholder">Placemark Description</string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="menu_showMap">Show Map</string>
    <string name="menu_report_all">All Donations</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hillforts Android App</string>
    <string name="nav_header_subtitle">Final Assessment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="aboutus_title">Hillforts Android App</string>
    <string name="aboutus_message">Hi, Welcome\n\n To the Hillforts App\n\n Please Register and Login in</string>

    <string name="action_add">Hillfort Add</string>
    <string name="action_report">Hillfort Report</string>
    <string name="action_edit">Hillfort Edit</string>
    <string name="action_donate">Donate</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>
    <string name="messageLoading">Please wait while we Connect to the Server...</string>

</resources>
