<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancel"
        android:tooltipText="@string/menutt_cancel"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_delete"
        android:tooltipText="@string/menutt_delete"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/item_location"
        android:title="location"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_save"
        android:title="@string/menu_saveHillfort"
        android:tooltipText="@string/menutt_saveHillfort"
        app:showAsAction="always"/>


</menu>