<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_AddHillfort"
            android:icon="@drawable/ic_menu_donate"
            android:title="@string/menu_addHillfort" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_login" />

        <item
            android:id="@+id/nav_AdminHillfort"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="Admin hillfort allocation" />


        <item
            android:id="@+id/nav_Stats"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="User Stats" />

        <item
            android:id="@+id/nav_OtherStats"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="Other User Stats" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
