<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addHillfort"
        app:showAsAction="always" />


    <item
        android:id="@+id/item_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_showMap"
        app:showAsAction="never"/>


    <item
         android:id="@+id/item_navigator"
         android:title="Navigate"
         app:showAsAction="never"/>

    <item
        android:id="@+id/item_search"
        android:title="Search"
        app:showAsAction="never"/>

</menu>