<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.me.hillfort.views.hillfort.PlacemarkView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true"
            android:scrollbarStyle="outsideOverlay"
            android:layout_marginTop="-36dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/appBarLayout"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp">

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="382dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.769"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="381dp" />

                <EditText
                    android:id="@+id/hillfortDescription"
                    android:layout_width="384dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/hint_hillfortDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.421"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

                <EditText
                    android:id="@+id/hillfortTitle"
                    android:layout_width="392dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="44dp"
                    android:autofillHints=""
                    android:hint="@string/hint_hillfortTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/hillfortImage"
                    android:layout_width="363dp"
                    android:layout_height="111dp"
                    android:layout_marginTop="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/chooseImage"
                    app:srcCompat="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="395dp"
                    android:layout_height="56dp"
                    android:inputType="textPersonName"
                    android:text="additional comment"
                    android:ems="10"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.456"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hillfortDescription" />

                <TextView
                    android:id="@+id/textView8"
                    android:text="Please enter lat lng above"
                    android:layout_width="295dp"
                    android:layout_height="32dp"
                    android:layout_marginBottom="64dp"
                    app:layout_constraintBottom_toTopOf="@+id/chooseImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_lng"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="157dp"
                    android:layout_height="44dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="324dp"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView8"
                    app:layout_constraintHorizontal_bias="0.764"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText3"
                    app:layout_constraintVertical_bias="0.0" />

                <EditText
                    android:id="@+id/location_lat"
                    android:layout_width="124dp"
                    android:layout_height="41dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText3" />

                <EditText
                    android:id="@+id/locartion_lng"
                    android:layout_width="114dp"
                    android:layout_height="41dp"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.531"
                    app:layout_constraintStart_toEndOf="@+id/location_lat"
                    app:layout_constraintTop_toBottomOf="@+id/editText3" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

